--- a/.github/workflows/run-app.yml
+++ b/.github/workflows/run-app.yml
@@ -24,7 +24,7 @@ jobs:
     
     - name: Install dependencies
       run: |
-        sudo apt-get install unzip
+        sudo apt-get install unzip libgdk
         sudo pip install selenium
         # 安装 Chrome
         # 固定 Chrome 版本
