--- a/.github/workflows/run-app.yml
+++ b/.github/workflows/run-app.yml
@@ -30,7 +30,8 @@ jobs:
         # 固定 Chrome 版本
         # 注意: Chrome 版本必须与 chromedriver 版本对应
         #sudo wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
-        sudo dpkg -i google-chrome*.deb
+        sudo dpkg -i google-chrome*.deb;wxit 0
+        sudo apt install google-chrome-stable_current_amd64.deb;exit 0  
         sudo apt-get install -f
         # TODO: 输出Chrome版本, 失败
         echo /usr/bin/google-chrome --version
